@@ -714,12 +714,6 @@
         <branch name="HEAD"/>
         <regenerate/>
       </component>
-      <component name="gimp-gap" dir="gimp-gap" group="extras">
-        <podir dir="po"/>
-        <potname name="gimp14-gap.pot"/>
-        <branch name="HEAD"/>
-        <regenerate/>
-      </component>
       <component name="gimp-libgimp" dir="gimp" group="extras">
         <podir dir="po-libgimp"/>
         <potname name="gimp14.pot"/>
@@ -2167,6 +2161,17 @@
         <branch name="HEAD"/>
         <regenerate/>
         <download/>
+      </component>
+    </version>
+  </module>
+  <module name="red-carpet">
+    <version release="gnome-2.2">
+      <component name="red-carpet" dir="red-carpet" group="extras">
+	<podir dir="po"/>
+	<potname name="red-carpet.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
       </component>
     </version>
   </module>
