@@ -1,5 +1,9 @@
 2003-03-26  Carlos Perelló Marín <carlos@gnome.org>
 
+	* translation-status.xml: Removed gimp-gap and added red-carpet.
+
+2003-03-26  Carlos Perelló Marín <carlos@gnome.org>
+
 	* translation-status.xml: Added gimp-gap.
 
 2003-03-23  Christian Rose  <menthos@menthos.com>
